argocd/base/resources/network-policies/keycloak/allow-gateway-ingress.yaml
# CiliumNetworkPolicy to allow traffic from Cilium Gateway API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
  ingress:
    # Allow Cilium Gateway API traffic (uses reserved:ingress identity)
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8443"
              protocol: TCP
